Fri Jun 19 18:28:19 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* experimental release 1.1b9_27.

Fri Jun 19 14:34:49 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (assign): support hack for nested multiple assignment.

	* parse.y (mlhs): nested multiple assignment.

	* eval.c (rb_eval): in-block variables now honors static scope.

	* configure.in: RSHIFT check moved to configure.

Thu Jun 18 16:46:04 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* experimental release 1.1b9_26.

Thu Jun 18 13:37:19 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* file.c (file_s_ftype): uses lstat(2) instead of stat(2).

	* dir.c (dir_s_glob): there can be buffer overrun, check added.

	* eval.c (f_binding): handles in-block variables declared after
	  binding's generation.

	* numeric.c (flo_floor): floor, ceil, round added to Float.

Wed Jun 17 11:20:00 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* parse.y (gettable): nesting local variables should have higher
 	  priority than normal local variables.

Tue Jun 16 12:30:46 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* bignum.c (str2inum): handles `+ddd'.

	* struct.c (make_struct): name parameter can be nil for unnamed
	  structures.

pMon Jun 15 16:30:10 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* object.c (class_s_inherited): prohibiting to make subclass of
	  class Class.

	* object.c (module_s_new): support for making subclass of Module.

	* parse.y (yycompile): clear eval_tree before compiling.

Fri Jun 12 17:58:18 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (eval): write back the_dyna_var into the block.

Thu Jun 11 18:19:18 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* experimental release 1.1b9_25.

	* eval.c (dvar_add_compiling): register dyna_var at compile time.

	* regex.c (re_compile_pattern): RE_DUP_MAX iteration is too big.

Wed Jun 10 15:12:04 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* io.c (io_eof): do not block other threads.
