@@ -238,7 +238,9 @@ AC_CACHE_VAL(rb_cv_rshift_sign,
 int
 main()
 {
-  return (-1!=(((-1)<<1)&FIXNUM_FLAG)>>1);
+  if (-1==(((-1)<<1)|FIXNUM_FLAG)>>1);
+    return 0;
+  return 1;
 }
 ],
 	rb_cv_rshift_sign=yes,
